<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTintMode="add"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:paddingRight="5sp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fio"
            android:textAlignment="center"
            android:textSize="24sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/patient_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card"
            android:textAlignment="center"
            android:textSize="24sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/patient_name"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/patient_diseases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diseases"
            android:textAlignment="center"
            android:textSize="24sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/patient_card"
            tools:layout_editor_absoluteX="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>